--- a/style.css
+++ b/style.css
@@ -208,6 +208,8 @@ header label {
     background-position: center;
     padding-bottom: 3rem;
     height: 100vh;
+    /* margin-top: 46rem; */
+
 }
 
 .about .column {
@@ -526,12 +528,15 @@ header label {
 
 }
 
-@media (max-width:991px) {
+@media (max-width:760px) {
 
     section {
         padding: 0 3%;
-        padding-top: 7.5rem;
+        padding-top: 2rem;
         padding-bottom: 2rem;
+    }
+    .about{
+        margin-top: 46rem;
     }
 
 }
